--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gray-matter": "^4.0.3",
     "next": "^14.2.16",
     "next-mdx-remote": "^5.0.0",
+    "next-sitemap": "^4.2.3",
     "postcss": "^8.4.39",
     "postcss-preset-env": "^9.5.15",
     "prismjs": "^1.29.0",
